Bleeding text collections issue

--- a/src/pages/commonComponents/collectionCard/CollectionCard.scss
+++ b/src/pages/commonComponents/collectionCard/CollectionCard.scss
@@ -1,38 +1,39 @@
 @import '../../../css/variables';
 @import '../../../css/mixins';
 
+
 .collectionCard {
 	width: 362px;
-	height: 355px;
+	min-height: 355px;
 	box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.09), -3px -3px 4px 0 rgba(0, 0, 0, 0.03);
 	background-color: #ffffff;
 	margin-bottom: 24px;
 	transform: translate(-8px, -8px);
 
 	@include mq('phone-wide', max) {
-		width: 320px !important;
-		height: 420px !important;
+		width: 100%;
+		min-height: 420px;
 	}
 
 	@include mq('phone', max) {
-		width: 280px !important;
+		width: 100%;
 	}
 }
 
 .collectionBackgroundCard {
 	width: 366px;
-	height: 359px;
+	min-height: 359px;
 	box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.09), -3px -3px 4px 0 rgba(0, 0, 0, 0.03);
 	background-color: #ffffff;
 	margin-bottom: 24px;
 
 	@include mq('phone-wide', max) {
-		width: 324px !important;
-		height: 424px !important;
+		width: 100%;
+		min-height: 424px;
 	}
 
 	@include mq('phone', max) {
-		width: 280px !important;
+		width: 100%;
 	}
 }
 
@@ -42,10 +43,6 @@
 
 .collectionCardHeader {
 	padding: 24px 24px 16px 24px !important;
-}
-
-.collectionCardFooter {
-	padding: 16px 24px 24px 24px !important;
 }
 
 .collectionCountsBanner {
@@ -58,29 +55,29 @@
 	padding-bottom: 8px !important;
 }
 
-#defaultCollectionCardImage {
-	width: 362px;
-	height: 141px;
+.defaultCollectionCardImage {
+	width: 100%;
+	height: 228px;
 	background-image: linear-gradient(124deg, #50b996, #485ea7);
 
 	@include mq('phone-wide', max) {
-		width: 320px !important;
+		width: 100%;
 	}
 
 	@include mq('phone', max) {
-		width: 280px !important;
+		width: 100%;
 	}
 }
 
 #collectionCardImage {
-	width: 362px !important;
-	height: 141px !important;
+	width: 100%;
+	height: 230px;
 
 	@include mq('phone-wide', max) {
-		width: 320px !important;
+		width: 100%;
 	}
 
 	@include mq('phone', max) {
-		width: 280px !important;
+		width: 100%;
 	}
 }
